tests/e2e/api_key/snapshots/e2e__e2e__api_key__pairs__create.snap
---
source: tests/e2e/api_key/pairs.rs
expression: "redacted create payload"
---
{
  "key_type": "ClientCredentials",
  "id": "[id]",
  "client_id": "[client_id]",
  "client_secret": "[client_secret]",
  "secret_expires_at": "[secret_expires_at]",
  "name": "[name]",
  "graphs": "[graphs]",
  "scopes": [
    "rover:cli"
  ],
  "success": true
}
