tests/e2e/api_key/snapshots/e2e__e2e__api_key__pairs__delete.snap
---
source: tests/e2e/api_key/pairs.rs
expression: "redacted delete payload"
---
{
  "id": "[id]",
  "key_type": "ClientCredentials",
  "success": true
}
