tests/e2e/api_key/snapshots/e2e__e2e__api_key__pairs__list_entry.snap
---
source: tests/e2e/api_key/pairs.rs
expression: "redacted list_entry payload"
---
{
  "key_type": "ClientCredentials",
  "id": "[id]",
  "client_id": "[client_id]",
  "name": "[name]",
  "graphs": "[graphs]",
  "scopes": [
    "rover:cli"
  ],
  "created_at": "[created_at]",
  "created_by": "[created_by]"
}
