tests/e2e/api_key/snapshots/e2e__e2e__api_key__pairs__rotate.snap
---
source: tests/e2e/api_key/pairs.rs
expression: "redacted rotate payload"
---
{
  "key_type": "ClientCredentials",
  "id": "[id]",
  "client_id": "[client_id]",
  "client_secret": "[client_secret]",
  "secret_expires_at": "[secret_expires_at]",
  "grace_period_days": 1,
  "previous_secrets_expire_at": "[previous_secrets_expire_at]",
  "success": true
}
